@@ -1,40 +1,35 @@
 package net.snowyhollows.solness.ashley;
 
-import com.badlogic.ashley.core.Component;
-import com.badlogic.ashley.core.ComponentMapper;
 import com.badlogic.ashley.core.Engine;
 import com.badlogic.ashley.core.Entity;
 import com.badlogic.gdx.assets.AssetManager;
-import net.snowyhollows.solness.spi.SnComponentType;
-import net.snowyhollows.solness.spi.SnScene;
+import net.snowyhollows.solness.spi.component.SnComponentType;
+import net.snowyhollows.solness.spi.scene.SnDefaultNodeType;
+import net.snowyhollows.solness.spi.scene.SnNode;
+import net.snowyhollows.solness.spi.scene.SnScene;
+import net.snowyhollows.solness.spi.util.ListPage;
+import net.snowyhollows.solness.spi.util.SimpleNode;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class AshleyScene implements SnScene<Engine, Entity> {
     private final String name;
     private final Engine engine;
     private final AssetManager assetManager;
+    private final List<AshleyComponent> components;
 
-
-    AshleyScene(String name, Engine engine, AssetManager assetManager, List<ComponentMapper<? extends Component>> mappers) {
+    AshleyScene(String name, Engine engine, AssetManager assetManager, List<AshleyComponent> components) {
         this.name = name;
         this.engine = engine;
         this.assetManager = assetManager;
+        this.components = components;
     }
 
     @Override
     public String getName() {
         return name;
-    }
-
-    @Override
-    public void readFromEngine() {
-
-    }
-
-    @Override
-    public void writeToEngine() {
-
     }
 
     @Override
@@ -49,12 +44,16 @@ public class AshleyScene implements SnScene<Engine, Entity> {
 
     @Override
     public Engine getEngine() {
-        return null;
+        return engine;
     }
 
     @Override
-    public List<Entity> getEntities() {
-        return engine.getEntities();
+    public SnNode<Entity> getRootNode() {
+        List<SnNode<Entity>> entities = new ArrayList<>();
+        for (Entity entity : engine.getEntities()) {
+            entities.add(new AshleyEntityNode(entity));
+        }
+        return new SimpleNode<>(SnDefaultNodeType.GROUP, "entities", new ListPage<>(entities));
     }
 
     @Override
@@ -65,12 +64,18 @@ public class AshleyScene implements SnScene<Engine, Entity> {
     }
 
     @Override
-    public List<SnComponentType> getComponents(SnComponentType componentType) {
-        return List.of();
+    public List<SnComponentType<Entity>> getComponents() {
+        return Collections.unmodifiableList(components);
     }
+
 
     @Override
     public void removeEntity(Entity entity) {
         engine.removeEntity(entity);
+    }
+
+    @Override
+    public void dispose() {
+
     }
 }
